# stm32

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: cmsis_compiler.h.95FEEC23414D7732.idx  cmsis_gcc.h.92ADF53E8C32E7E2.idx  core_cm4.h.BEA6C876C164291E.idx  delay.c.1202ED57ED18CF2E.idx  delay.h.8038BDF730D7D8F1.idx  main.c.6545A7DE14F3118E.idx  misc.c.B2AFFEC2CC20D77D.idx  startup_stm32f411xe.s.008492AC5A2E0EBE.idx  stm32f4xx.h.43CCB1D468091D2D.idx  stm32f4xx_adc.c.3D88BDAD4A37F256.idx  stm32f4xx_adc.h.FD732831CA2AA120.idx  stm32f4xx_can.c.DCBF253141D5B988.idx  stm32f4xx_can.h.28EFB0E48228ECF8.idx  stm32f4xx_cec.c.59969CC31CE39FE6.idx  stm32f4xx_conf.h.CA70E6DAAE03E729.idx  stm32f4xx_crc.c.A48776AF050774E7.idx  stm32f4xx_cryp.c.BEFA2B446CDD1DA8.idx  stm32f4xx_cryp.h.42D143FCFC1317D0.idx  stm32f4xx_cryp_aes.c.5AFC7FF8A1086F0A.idx  stm32f4xx_cryp_des.c.E6C3CDCC89A1B3DA.idx  stm32f4xx_cryp_tdes.c.7DB7CD0AC1FD96FE.idx  stm32f4xx_dac.c.85B5557A07734E17.idx  stm32f4xx_dac.h.9E87B259B996D3CA.idx  stm32f4xx_dbgmcu.c.4583C786831C5690.idx  stm32f4xx_dbgmcu.h.25D22810FC092653.idx  stm32f4xx_dcmi.c.EFCC1546C91C088C.idx  stm32f4xx_dcmi.h.410C1935E4CDB585.idx  stm32f4xx_dfsdm.c.29B2675EE2B531B1.idx  stm32f4xx_dma.c.A034BE7E6A5E53B6.idx  stm32f4xx_dma2d.c.80862DB8ABE61D39.idx  stm32f4xx_dma2d.h.C2C1D72B6B66A9D8.idx  stm32f4xx_dsi.c.54813B589FDE1785.idx  stm32f4xx_exti.c.26E74A79719E9E23.idx  stm32f4xx_flash.c.DBFFD755757833F3.idx  (+41 more)
.ccls-cache/@@home@tll@embeded@domino-stm/: @usr@lib@clang@18@include@stdint.h.blob
.ccls-cache/@home@tll@embeded@domino-stm/: dev@inc@misc.h.blob  dev@inc@stm32f4xx_adc.h.blob  dev@inc@stm32f4xx_can.h.blob  dev@inc@stm32f4xx_cec.h.blob  dev@inc@stm32f4xx_crc.h.blob  dev@inc@stm32f4xx_cryp.h.blob  dev@inc@stm32f4xx_dac.h.blob  dev@inc@stm32f4xx_dbgmcu.h.blob  dev@inc@stm32f4xx_dcmi.h.blob  dev@inc@stm32f4xx_dfsdm.h.blob  dev@inc@stm32f4xx_dma.h.blob  dev@inc@stm32f4xx_dma2d.h.blob  dev@inc@stm32f4xx_dsi.h.blob  dev@inc@stm32f4xx_exti.h.blob  dev@inc@stm32f4xx_flash.h.blob  dev@inc@stm32f4xx_flash_ramfunc.h.blob  dev@inc@stm32f4xx_fmpi2c.h.blob  dev@inc@stm32f4xx_gpio.h.blob  dev@inc@stm32f4xx_hash.h.blob  dev@inc@stm32f4xx_i2c.h.blob  dev@inc@stm32f4xx_iwdg.h.blob  dev@inc@stm32f4xx_lptim.h.blob  dev@inc@stm32f4xx_ltdc.h.blob  dev@inc@stm32f4xx_pwr.h.blob  dev@inc@stm32f4xx_qspi.h.blob  dev@inc@stm32f4xx_rcc.h.blob  dev@inc@stm32f4xx_rng.h.blob  dev@inc@stm32f4xx_rtc.h.blob  dev@inc@stm32f4xx_sai.h.blob  dev@inc@stm32f4xx_sdio.h.blob  dev@inc@stm32f4xx_spdifrx.h.blob  dev@inc@stm32f4xx_spi.h.blob  dev@inc@stm32f4xx_syscfg.h.blob  dev@inc@stm32f4xx_tim.h.blob  dev@inc@stm32f4xx_usart.h.blob  dev@inc@stm32f4xx_wwdg.h.blob  dev@src@misc.c.blob  dev@src@stm32f4xx_adc.c.blob  dev@src@stm32f4xx_can.c.blob  dev@src@stm32f4xx_cec.c.blob  (+63 more)
init/: CMakeLists.txt  gcc-arm-none-eabi.cmake
src/: main.c  stm32f4xx_it.c  systeminit.c
src/inte/: key_exti.c  tim_it.c
src/peri/: gpio.c  iwdg.c  key.c  pwm.c  spi.c  time.c  usart.c
sys/: delay.c  delay.h
(+15 files in other folders)
